# agent-acceptance

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GTM.md
docs/outreach/: README.md  replies.md
docs/outreach/emails/: 01-sfd-seattle-fire.md  02-corti-vendor.md  03-logikality-5b.md  04-oper-credits-5b.md
examples/: scenarios.yaml
src/agent_acceptance/: __init__.py  cli.py  models.py  orchestrator.py  report.py
tests/: test_models.py  test_report.py
