[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-acceptance"
version = "0.1.0"
description = "One acceptance report for agentic AI: cross-layer behavioral sign-off (agent-handoff) + governed-memory MGS eval (verified-memory-gate)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Masoob Alam", email = "masoob0085@gmail.com" }]
keywords = ["agents", "acceptance", "governance", "consequence-control", "eval", "handoff", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Full functionality needs the two sibling portfolio repos installed editable
# from the workspace (they are not on PyPI). Without them, the package still
# builds, the report-merging logic works, and the CLI reports each missing leg
# honestly instead of crashing.
#   pip install -e ../agent-handoff -e ../verified-memory-gate -e .[full,dev]
full = [
    "agent-handoff>=0.1.0",
    "verified-memory-gate>=0.1.0",
]
dev = ["pytest>=8.0"]

[project.scripts]
agent-acceptance = "agent_acceptance.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_acceptance"]

[tool.hatch.build.targets.sdist]
include = ["src/agent_acceptance", "tests", "examples", "docs", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
